# smart-switches/server/model/layout.go
@@ -1,0 +1,40 @@
+package model
+
+// LayoutVersion is an enum representing supported layout versions
+type LayoutVersion string
+
+const (
+	V9 LayoutVersion = "v9"
+)
+
+// LayoutDefinition defines the structure and capabilities of a layout version
+type LayoutDefinition struct {
+	Version LayoutVersion
+	Buttons []string
+}
+
+// LayoutDefinitions contains all supported layout versions
+var LayoutDefinitions = map[LayoutVersion]LayoutDefinition{
+	V9: {
+		Version: V9,
+		Buttons: []string{
+			"on",
+			"off",
+			"1",
+			"2",
+			"3",
+			"4",
+			"5",
+			"6",
+			"7",
+			"8",
+		},
+	},
+}
+
+// LayoutInstance represents a user's configured layout instance
+type LayoutInstance struct {
+	Version LayoutVersion      `json:"version"`
+	Buttons map[string]Command `json:"buttons"`
+	Flipped bool               `json:"flipped"`
+}
