# smart-switches/server/spec/openapi.yaml
@@ -145,143 +145,21 @@ components:
         - entityId
         - friendlyName
       type: object
-    LayoutV4:
+    LayoutInstance:
       additionalProperties: false
       properties:
-        "1":
-          $ref: '#/components/schemas/Command'
-        "2":
-          $ref: '#/components/schemas/Command'
-        "3":
-          $ref: '#/components/schemas/Command'
-        "4":
-          $ref: '#/components/schemas/Command'
-        "5":
-          $ref: '#/components/schemas/Command'
-        "6":
-          $ref: '#/components/schemas/Command'
-        "7":
-          $ref: '#/components/schemas/Command'
-        "8":
-          $ref: '#/components/schemas/Command'
-        "off":
-          $ref: '#/components/schemas/Command'
-        "on":
-          $ref: '#/components/schemas/Command'
-      type: object
-    LayoutV5:
-      additionalProperties: false
-      properties:
-        "5":
-          $ref: '#/components/schemas/Command'
-        "6":
-          $ref: '#/components/schemas/Command'
-        "7":
-          $ref: '#/components/schemas/Command'
-        "8":
-          $ref: '#/components/schemas/Command'
+        buttons:
+          additionalProperties:
+            $ref: '#/components/schemas/Command'
+          type: object
         flipped:
           type: boolean
-        "off":
-          $ref: '#/components/schemas/Command'
-        "on":
-          $ref: '#/components/schemas/Command'
-        wheel-routines:
-          items:
-            $ref: '#/components/schemas/WheelRoutine'
-          type:
-            - array
-            - "null"
-      type: object
-    LayoutV6:
-      additionalProperties: false
-      properties:
-        "5":
-          $ref: '#/components/schemas/Command'
-        "6":
-          $ref: '#/components/schemas/Command'
-        "7":
-          $ref: '#/components/schemas/Command'
-        "8":
-          $ref: '#/components/schemas/Command'
-        flipped:
-          type: boolean
-        "off":
-          $ref: '#/components/schemas/Command'
-        "on":
-          $ref: '#/components/schemas/Command'
-        wheel-routines:
-          items:
-            $ref: '#/components/schemas/WheelRoutine'
-          type:
-            - array
-            - "null"
-      type: object
-    LayoutV7:
-      additionalProperties: false
-      properties:
-        "1":
-          $ref: '#/components/schemas/Command'
-        "2":
-          $ref: '#/components/schemas/Command'
-        "3":
-          $ref: '#/components/schemas/Command'
-        "4":
-          $ref: '#/components/schemas/Command'
-        "5":
-          $ref: '#/components/schemas/Command'
-        "6":
-          $ref: '#/components/schemas/Command'
-        "7":
-          $ref: '#/components/schemas/Command'
-        "8":
-          $ref: '#/components/schemas/Command'
-        flipped:
-          type: boolean
-        "off":
-          $ref: '#/components/schemas/Command'
-        "on":
-          $ref: '#/components/schemas/Command'
-      type: object
-    LayoutV9:
-      additionalProperties: false
-      properties:
-        "1":
-          $ref: '#/components/schemas/Command'
-        "2":
-          $ref: '#/components/schemas/Command'
-        "3":
-          $ref: '#/components/schemas/Command'
-        "4":
-          $ref: '#/components/schemas/Command'
-        "5":
-          $ref: '#/components/schemas/Command'
-        "6":
-          $ref: '#/components/schemas/Command'
-        "7":
-          $ref: '#/components/schemas/Command'
-        "8":
-          $ref: '#/components/schemas/Command'
-        flipped:
-          type: boolean
-        "off":
-          $ref: '#/components/schemas/Command'
-        "on":
-          $ref: '#/components/schemas/Command'
-      type: object
-    Layouts:
-      additionalProperties: false
-      properties:
-        v4:
-          $ref: '#/components/schemas/LayoutV4'
-        v5:
-          $ref: '#/components/schemas/LayoutV5'
-        v6:
-          $ref: '#/components/schemas/LayoutV6'
-        v7:
-          $ref: '#/components/schemas/LayoutV7'
-        v9:
-          $ref: '#/components/schemas/LayoutV9'
+        version:
+          type: string
+      required:
+        - version
+        - buttons
+        - flipped
       type: object
     ListBLEDevicesResponseBody:
       additionalProperties: false
@@ -402,28 +280,11 @@ components:
       additionalProperties: false
       properties:
         layouts:
-          $ref: '#/components/schemas/Layouts'
+          additionalProperties:
+            $ref: '#/components/schemas/LayoutInstance'
+          type: object
       required:
         - layouts
-      type: object
-    WheelRoutine:
-      additionalProperties: false
-      properties:
-        command:
-          type: string
-        name:
-          type: string
-        rgb:
-          items:
-            format: int64
-            type: integer
-          type:
-            - array
-            - "null"
-      required:
-        - name
-        - rgb
-        - command
       type: object
 info:
   title: Smart Switches
