# smart-switches/site/src/api/models/LayoutV5.ts
@@ -1,87 +1,0 @@
-/**
- * Smart Switches
- * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
- *
- * OpenAPI spec version: 
- * 
- *
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
- * https://openapi-generator.tech
- * Do not edit the class manually.
- */
-
-import { Command } from '../models/Command';
-import { WheelRoutine } from '../models/WheelRoutine';
-import { HttpFile } from '../http/http';
-
-export class LayoutV5 {
-    '_5'?: Command;
-    '_6'?: Command;
-    '_7'?: Command;
-    '_8'?: Command;
-    'flipped'?: boolean;
-    'off'?: Command;
-    'on'?: Command;
-    'wheel_routines'?: Array<WheelRoutine> | null;
-
-    static readonly discriminator: string | undefined = undefined;
-
-    static readonly mapping: {[index: string]: string} | undefined = undefined;
-
-    static readonly attributeTypeMap: Array<{name: string, baseName: string, type: string, format: string}> = [
-        {
-            "name": "_5",
-            "baseName": "5",
-            "type": "Command",
-            "format": ""
-        },
-        {
-            "name": "_6",
-            "baseName": "6",
-            "type": "Command",
-            "format": ""
-        },
-        {
-            "name": "_7",
-            "baseName": "7",
-            "type": "Command",
-            "format": ""
-        },
-        {
-            "name": "_8",
-            "baseName": "8",
-            "type": "Command",
-            "format": ""
-        },
-        {
-            "name": "flipped",
-            "baseName": "flipped",
-            "type": "boolean",
-            "format": ""
-        },
-        {
-            "name": "off",
-            "baseName": "off",
-            "type": "Command",
-            "format": ""
-        },
-        {
-            "name": "on",
-            "baseName": "on",
-            "type": "Command",
-            "format": ""
-        },
-        {
-            "name": "wheel_routines",
-            "baseName": "wheel-routines",
-            "type": "Array<WheelRoutine>",
-            "format": ""
-        }    ];
-
-    static getAttributeTypeMap() {
-        return LayoutV5.attributeTypeMap;
-    }
-
-    public constructor() {
-    }
-}
