# smart-switches/site/src/api/models/Layouts.ts
@@ -1,69 +1,0 @@
-/**
- * Smart Switches
- * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
- *
- * OpenAPI spec version: 
- * 
- *
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
- * https://openapi-generator.tech
- * Do not edit the class manually.
- */
-
-import { LayoutV4 } from '../models/LayoutV4';
-import { LayoutV5 } from '../models/LayoutV5';
-import { LayoutV6 } from '../models/LayoutV6';
-import { LayoutV7 } from '../models/LayoutV7';
-import { LayoutV9 } from '../models/LayoutV9';
-import { HttpFile } from '../http/http';
-
-export class Layouts {
-    'v4'?: LayoutV4;
-    'v5'?: LayoutV5;
-    'v6'?: LayoutV6;
-    'v7'?: LayoutV7;
-    'v9'?: LayoutV9;
-
-    static readonly discriminator: string | undefined = undefined;
-
-    static readonly mapping: {[index: string]: string} | undefined = undefined;
-
-    static readonly attributeTypeMap: Array<{name: string, baseName: string, type: string, format: string}> = [
-        {
-            "name": "v4",
-            "baseName": "v4",
-            "type": "LayoutV4",
-            "format": ""
-        },
-        {
-            "name": "v5",
-            "baseName": "v5",
-            "type": "LayoutV5",
-            "format": ""
-        },
-        {
-            "name": "v6",
-            "baseName": "v6",
-            "type": "LayoutV6",
-            "format": ""
-        },
-        {
-            "name": "v7",
-            "baseName": "v7",
-            "type": "LayoutV7",
-            "format": ""
-        },
-        {
-            "name": "v9",
-            "baseName": "v9",
-            "type": "LayoutV9",
-            "format": ""
-        }    ];
-
-    static getAttributeTypeMap() {
-        return Layouts.attributeTypeMap;
-    }
-
-    public constructor() {
-    }
-}
